--- a/client/src/screens/shared/Header/Header.css
+++ b/client/src/screens/shared/Header/Header.css
@@ -1,23 +1,32 @@
 .header-container {
   border: 2px solid red;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
 }
 
 .address-container {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
+  padding: 0.5vh 0;
+  background-color: var(--grey);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .nav-link-container {
-  border: 2px solid green;
+  background-color: transparent;
+  height: 5vh;
+  /* border: 2px solid green; */
   display: flex;
   justify-content: flex-end;
 }
 
 .nav-menu {
-  border: 2px solid purple;
+  /* border: 2px solid purple; */
   width: 50%;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
