--- a/client/src/screens/shared/Header/Header.css
+++ b/client/src/screens/shared/Header/Header.css
@@ -1,5 +1,5 @@
 .header-container {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   position: fixed;
   top: 0;
   right: 0;
@@ -14,6 +14,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.5s;
+}
+
+.address-container-transition {
+  transform: translateY(-100%);
+  height: 0;
+  padding: 0;
+  transition: 0.5s;
 }
 
 .nav-link-container2 {
@@ -21,6 +29,9 @@
   height: 5vh;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+  /* transform: translateY(-100%); */
+  transition: 0.5s;
 }
 
 .nav-link-container {
