--- a/client/src/screens/About/About.css
+++ b/client/src/screens/About/About.css
@@ -28,6 +28,58 @@
   width: 100%;
   position: absolute;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  /* justify-content: center; */
+  flex-direction: column;
   box-shadow: 10px 20px 20px rgba(90, 90, 90, 0.2);
+  padding: 4% 10%;
+  /* border: 2px solid blue; */
+}
+
+.about-header {
+  /* border: 2px solid white; */
+  color: var(--background);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 4%;
+}
+
+.about-header-left {
+  height: 2px;
+  width: 2px;
+  /* background-color: var(--background); */
+  margin: 5px 30px 0 0;
+  transition: 1s;
+}
+
+.about-header-right {
+  height: 2px;
+  width: 2px;
+  /* background-color: var(--background); */
+  margin: 5px 0 0 30px;
+  transition: 1s;
+}
+
+.about-header-accents {
+  background-color: var(--background);
+  width: 35%;
+}
+
+.about-paragraph {
+  color: var(--background);
+  /* background-color: blue; */
+  /* border: 2px solid white; */
+  height: 100%;
+  width: 80%;
+  /* padding: 5%; */
+}
+
+.about-photo {
+  border: 2px solid blue;
+  width: 90%;
+  height: 90%;
+  position: absolute;
+  top: 5%;
 }
