lots of styling updates. information and menu

--- a/client/src/screens/Menu/Menu.css
+++ b/client/src/screens/Menu/Menu.css
@@ -1,19 +1,23 @@
 .menu-container {
-  height: 80vh;
+  height: 240vh;
   background-color: var(--beige);
+  background-image: url("../../assets/circle-logo.png");
   display: flex;
+  flex-direction: column;
 }
 
 .menu-photo {
   border: 2px solid blue;
-  width: 50%;
+  height: 80vh;
+  width: 100%;
 }
 
 .menu-content {
   border: 2px solid green;
-  width: 50%;
+  height: 80vh;
+  width: 100%;
   /* background-image: url("../../assets/logo-circle.png"); */
-  background-image: url("../../assets/circle-logo.png");
+  /* background-image: url("../../assets/circle-logo.png"); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,11 +25,18 @@
 }
 
 .menu-info {
-  width: 75%;
-  height: 60%;
-  border-radius: 10px;
+  width: 70%;
+  height: 80%;
+  border-radius: 5px;
   background-color: var(--light-red);
   display: flex;
   justify-content: center;
   box-shadow: 10px 20px 20px rgba(90, 90, 90, 0.2);
+  opacity: 100%;
+  transition: 1s;
+}
+
+.menu-info-transition {
+  opacity: 0;
+  transform: translateY(100%);
 }
