--- a/client/src/screens/Information/Information.css
+++ b/client/src/screens/Information/Information.css
@@ -11,6 +11,36 @@
 .info-content {
   height: 50%;
   width: 75%;
-  background-color: var(--background);
+  background-color: blue;
+  /* background-color: var(--background); */
   box-shadow: 10px 20px 20px rgba(90, 90, 90, 0.2);
+  display: flex;
+  justify-content: center;
+  /* flex-direction: column; */
+  /* align-items: center; */
+}
+
+.info {
+  height: 40%;
+  width: 40%;
+  position: relative;
+  top: 50%;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+  padding: 1% 0;
+  /* background-color: var(--background); */
+  border: 2px solid red;
+}
+
+.info-title {
+  background-image: url("../../assets/Dragonfly.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 100%;
+  height: 20%;
+  margin-bottom: 5%;
+  border: 2px solid green;
 }
