--- a/client/src/screens/shared/Header/Header.css
+++ b/client/src/screens/shared/Header/Header.css
@@ -25,7 +25,7 @@
 }
 
 .nav-link-container2 {
-  background-color: red;
+  background-color: var(--red);
   height: 5vh;
   display: flex;
   justify-content: flex-end;
