--- a/client/src/components/CarouselSlide/CarouselSlide.css
+++ b/client/src/components/CarouselSlide/CarouselSlide.css
@@ -1,10 +1,19 @@
 .slide {
   /* position: absolute; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
   width: 100vw;
-  border: 2px solid purple;
+  min-width: 100vw;
+  overflow-x: hidden;
+  /* border: 2px solid purple; */
   transform: translateX(0%);
-  transition: 1s;
+
+  transition: 0.5s;
+  transition-delay: 0.5s;
+  /* z-index: 10; */
+  /* display: none; */
 }
 
 /* .slide-exit {
@@ -12,15 +21,27 @@
 
 .slide-transition-right {
   /* position: absolute; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
   width: 100vw;
+  /* min-width: 100vw; */
   transform: translateX(100%);
-  transition: 1s;
+  /* transition-delay: 1s; */
+  /* transition: 1s; */
+  /* display: none; */
 }
 .slide-transition-left {
   /* position: absolute; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
   width: 100vw;
+  /* min-width: 100vw; */
   transform: translateX(-100%);
-  transition: 1s;
+  /* transition-delay: 1s; */
+  /* transition: 1s; */
+  /* display: none; */
 }
