--- a/client/src/screens/About/About.css
+++ b/client/src/screens/About/About.css
@@ -33,6 +33,7 @@
   flex-direction: column;
   box-shadow: 10px 20px 20px rgba(90, 90, 90, 0.2);
   padding: 4% 10%;
+
   /* border: 2px solid blue; */
 }
 
@@ -44,12 +45,12 @@
   align-items: center;
   width: 100%;
   margin-bottom: 4%;
+  z-index: 2;
 }
 
 .about-header-left {
   height: 2px;
   width: 2px;
-  /* background-color: var(--background); */
   margin: 5px 30px 0 0;
   transition: 1s;
 }
@@ -57,7 +58,6 @@
 .about-header-right {
   height: 2px;
   width: 2px;
-  /* background-color: var(--background); */
   margin: 5px 0 0 30px;
   transition: 1s;
 }
@@ -65,21 +65,33 @@
 .about-header-accents {
   background-color: var(--background);
   width: 35%;
+  z-index: 2;
 }
 
 .about-paragraph {
   color: var(--background);
-  /* background-color: blue; */
-  /* border: 2px solid white; */
   height: 100%;
   width: 80%;
+  z-index: 2;
+  transition: 1s;
+  /* border: 2px solid blue; */
+  opacity: 100;
+  transform: translateY(0);
   /* padding: 5%; */
 }
 
+.about-paragraph-transition {
+  opacity: 0;
+  transform: translateY(80%);
+}
+
 .about-photo {
-  border: 2px solid blue;
+  background: linear-gradient(rgba(80, 80, 80, 0.5), rgba(80, 80, 80, 0.5)),
+    url("../../assets/deluxx_photos/cocktail1.jpg");
+  background-position: center;
+  background-size: cover;
   width: 90%;
-  height: 90%;
+  height: 100%;
   position: absolute;
-  top: 5%;
+  top: 0%;
 }
