about section styling updates, small slideshow changes

--- a/client/src/screens/shared/Header/Header.css
+++ b/client/src/screens/shared/Header/Header.css
@@ -10,7 +10,8 @@
 .address-container {
   /* border: 2px solid blue; */
   padding: 0.5vh 0;
-  background-color: var(--grey);
+  color: var(--light-red);
+  background-color: var(--dark-red);
   display: flex;
   justify-content: center;
   align-items: center;
