--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,8 +25,9 @@ button {
   --background: #eae7dc;
   --beige: #d8c3a5;
   --grey: #8e8d8a;
-  --light-red: #e98074;
-  --red: #e85a4f;
+  --light-red: #f1d2d5;
+  --red: #b65e59;
+  --dark-red: #8c3f37;
 }
 
 body {
