--- a/client/src/components/CarouselSlide/CarouselSlide.css
+++ b/client/src/components/CarouselSlide/CarouselSlide.css
@@ -4,14 +4,14 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  width: 100vw;
-  min-width: 100vw;
+  width: 100%;
+  min-width: 100%;
   overflow-x: hidden;
   /* border: 2px solid purple; */
   transform: translateX(0%);
 
-  transition: 0.5s;
-  transition-delay: 0.5s;
+  transition: 0.25s;
+  transition-delay: 0.25s;
   /* z-index: 10; */
   /* display: none; */
 }
@@ -25,7 +25,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  width: 100vw;
+  width: 100%;
   /* min-width: 100vw; */
   transform: translateX(100%);
   /* transition-delay: 1s; */
@@ -38,7 +38,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  width: 100vw;
+  width: 100%;
   /* min-width: 100vw; */
   transform: translateX(-100%);
   /* transition-delay: 1s; */
