--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -17,13 +17,14 @@
   position: relative;
   display: flex;
   height: 100%;
-  width: 100vw;
-  min-width: 100vw;
+  /* width: 100vw; */
+  min-width: 100%;
+  /* border: 2px solid yellow; */
   overflow-x: hidden;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   /* transition: 0.5s; */
-  -webkit-backface-visibility: hidden;
+  /* -webkit-backface-visibility: hidden; */
   /* background-color: blue; */
 }
