--- a/client/src/screens/About/About.css
+++ b/client/src/screens/About/About.css
@@ -1,6 +1,7 @@
 .about-container {
-  background-color: var(--background);
+  background-color: var(--dark-red);
   height: 150vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,41 +12,69 @@
   content: "";
   height: 100%;
   width: 100%;
-  background-image: url("../../assets/grey-tiles.png");
+  background-image: url("../../assets/title-flat.png");
   background-repeat: repeat;
   background-position: center;
   background-size: contain;
   position: fixed;
   top: 0;
-  right: 0;
-  opacity: 0.2;
+  left: 0;
+  opacity: 0.7;
   z-index: -1;
 }
-
 .about-content {
-  background-color: var(--red);
+  display: flex;
   height: 70%;
   width: 100%;
   position: absolute;
   display: flex;
-  align-items: center;
-  /* justify-content: center; */
+  /* align-items: center; */
+  box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.4);
+  overflow-y: hidden;
+}
+.about-text {
+  background: linear-gradient(to left, var(--dark-red) 18%, rgba(0, 0, 0, 0.2)),
+    var(--dark-red);
+  /* background-color: var(--dark-red); */
+  display: flex;
   flex-direction: column;
-  box-shadow: 10px 20px 20px rgba(90, 90, 90, 0.2);
-  padding: 4% 10%;
+  width: 30%;
+  position: relative;
+  padding: 2% 5%;
+  z-index: 5;
+}
 
-  /* border: 2px solid blue; */
+.about-text::after {
+  content: "";
+  position: absolute;
+  right: -10%;
+  bottom: 0;
+  height: 110%;
+  width: 100px;
+  background-color: var(--dark-red);
+  transform: rotate(7deg);
+  box-shadow: 70px 20px 50px rgba(0, 0, 0, 0.4);
+  /* border: 2px solid yellow; */
+  z-index: -1;
 }
 
 .about-header {
   /* border: 2px solid white; */
-  color: var(--background);
+  color: var(--light-red);
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 150%;
   margin-bottom: 4%;
   z-index: 2;
+  position: absolute;
+  opacity: 100;
+  top: 8%;
+}
+
+.about-header-transition {
+  opacity: 0;
+  top: 30%;
 }
 
 .about-header-left {
@@ -63,21 +92,26 @@
 }
 
 .about-header-accents {
-  background-color: var(--background);
+  background-color: var(--light-red);
   width: 35%;
+  z-index: 2;
+}
+.about-header-accents-right {
+  background-color: var(--light-red);
+  width: 45%;
   z-index: 2;
 }
 
 .about-paragraph {
-  color: var(--background);
+  color: var(--light-red);
   height: 100%;
-  width: 80%;
+  width: 100%;
   z-index: 2;
   transition: 1s;
-  /* border: 2px solid blue; */
+  padding: 30% 0 0 8%;
+  align-items: center;
   opacity: 100;
   transform: translateY(0);
-  /* padding: 5%; */
 }
 
 .about-paragraph-transition {
@@ -86,12 +120,12 @@
 }
 
 .about-photo {
-  background: linear-gradient(rgba(80, 80, 80, 0.5), rgba(80, 80, 80, 0.5)),
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url("../../assets/deluxx_photos/cocktail1.jpg");
   background-position: center;
   background-size: cover;
-  width: 90%;
+  width: 70%;
   height: 100%;
-  position: absolute;
-  top: 0%;
+  /* position: absolute; */
+  /* top: 0%; */
 }
