--- a/client/src/screens/About/About.css
+++ b/client/src/screens/About/About.css
@@ -65,6 +65,7 @@
   justify-content: center;
   align-items: center;
   width: 150%;
+  min-width: 685px;
   margin-bottom: 4%;
   z-index: 2;
   position: absolute;
@@ -104,14 +105,17 @@
 
 .about-paragraph {
   color: var(--light-red);
-  height: 100%;
-  width: 100%;
+  height: 70%;
+  width: 90%;
   z-index: 2;
   transition: 1s;
-  padding: 30% 0 0 8%;
-  align-items: center;
+  /* padding: 30% 0 0 8%; */
+  display: flex;
+  align-items: flex-start;
   opacity: 100;
   transform: translateY(0);
+  position: relative;
+  top: 20%;
 }
 
 .about-paragraph-transition {
