--- a/client/src/screens/Information/Information.css
+++ b/client/src/screens/Information/Information.css
@@ -3,9 +3,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: var(--beige); */
-  /* z-index: -2; */
+  background-color: var(--dark-red);
+  border: 2px solid blue;
   /* opacity: 0.25; */
+}
+.info-container::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-image: url("../../assets/title-flat.png");
+  background-repeat: repeat;
+  background-position: center;
+  background-size: contain;
+  background-attachment: fixed;
+  position: relative;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  /* z-index: -1; */
 }
 
 .info-content {
@@ -16,8 +31,11 @@
   box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
+  position: absolute;
   /* flex-direction: column; */
   /* align-items: center; */
+  /* position: absolute; */
+  /* z-index: 10; */
 }
 
 .info {
