--- a/client/src/components/CarouselSlide/CarouselSlide.css
+++ b/client/src/components/CarouselSlide/CarouselSlide.css
@@ -1,5 +1,6 @@
 .slide {
   /* position: absolute; */
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
