--- a/client/src/screens/Title/Title.css
+++ b/client/src/screens/Title/Title.css
@@ -1,6 +1,4 @@
 .title-container {
-  /* background-color: var(--light-red); */
-  /* height: 100vh; */
   height: 85vh;
   display: flex;
   justify-content: center;
@@ -10,7 +8,8 @@
 
 .title-content {
   height: 100%;
-  width: 50%;
+  width: 70%;
+  max-width: 700px;
   background-image: url("../../assets/Dragonfly.png");
   background-repeat: no-repeat;
   background-size: contain;
