--- a/client/src/screens/shared/Header/Header.css
+++ b/client/src/screens/shared/Header/Header.css
@@ -18,6 +18,13 @@
   transition: 0.5s;
 }
 
+.address {
+  border: 2px solid green;
+  /* width: 50%; */
+  /* display: flex; */
+  /* justify-content: flex-end; */
+}
+
 .address-container-transition {
   transform: translateY(-100%);
   height: 0;
