--- a/client/src/screens/Information/Information.css
+++ b/client/src/screens/Information/Information.css
@@ -42,6 +42,7 @@
   position: relative;
   top: 55%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
   padding: 1% 0;
@@ -55,16 +56,50 @@
   background-size: contain;
   background-position: center;
   width: 100%;
-  height: 20%;
-  margin-bottom: 5%;
-  border: 2px solid green;
+  height: 30%;
+  /* margin-bottom: 5%; */
+  /* border: 2px solid green; */
+}
+
+.info-text {
+  /* border: 2px solid red; */
+  height: 90%;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .info-location,
 .info-hours {
   color: var(--light-red);
   display: flex;
+  height: 100%;
+  width: 40%;
+  /* border: 2px solid red; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 0.75rem;
+  letter-spacing: 1px;
+}
+
+.info-location p {
+  line-height: 1.5;
+}
+
+.info-location h4,
+.info-hours h4 {
+  line-height: 1.5;
+  font-size: 1rem;
+}
+
+.info-icon-container {
+  /* border: 2px solid red; */
+  height: 10%;
+  width: 60%;
+  color: var(--light-red);
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-evenly;
 }
