--- a/client/src/screens/shared/Header/Header.css
+++ b/client/src/screens/shared/Header/Header.css
@@ -1,5 +1,4 @@
 .header-container {
-  /* border: 2px solid red; */
   position: fixed;
   top: 0;
   right: 0;
@@ -8,7 +7,6 @@
 }
 
 .address-container {
-  /* border: 2px solid blue; */
   padding: 0.5vh 0;
   color: var(--light-red);
   background-color: var(--dark-red);
@@ -18,18 +16,18 @@
   transition: 0.5s;
 }
 
-.address {
-  border: 2px solid green;
-  /* width: 50%; */
-  /* display: flex; */
-  /* justify-content: flex-end; */
-}
-
 .address-container-transition {
   transform: translateY(-100%);
   height: 0;
   padding: 0;
   transition: 0.5s;
+}
+
+.address {
+  font-size: 0.75rem;
+  padding: 5px;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 
 .nav-link-container2 {
@@ -38,20 +36,17 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  /* transform: translateY(-100%); */
   transition: 0.5s;
 }
 
 .nav-link-container {
   background-color: transparent;
   height: 8vh;
-  /* border: 2px solid green; */
   display: flex;
   justify-content: flex-end;
 }
 
 .nav-menu {
-  /* border: 2px solid purple; */
   width: 50%;
   display: flex;
   justify-content: space-evenly;
@@ -60,9 +55,8 @@
 
 .nav-link {
   color: var(--light-red);
-  font-weight: 800;
+  font-weight: 700;
   letter-spacing: 2px;
-  /* border: 2px solid red; */
   position: relative;
 }
 
