--- a/client/src/screens/Menu/Menu.css
+++ b/client/src/screens/Menu/Menu.css
@@ -92,6 +92,14 @@
   position: absolute;
   bottom: 0%;
   left: 0%;
+  z-index: 4;
+  opacity: 100%;
+  transition: opacity 0.5s, transform 1.5s;
+}
+
+.menu-content-photo-transition {
+  opacity: 0;
+  transform: translateY(100%);
 }
 
 .menu-content-photo2 {
@@ -101,6 +109,9 @@
   position: absolute;
   bottom: 3vh;
   right: 30vh;
+  z-index: 4;
+  opacity: 100%;
+  transition: opacity 0.5s, transform 2.5s;
 }
 
 .menu-content-photo3 {
@@ -110,6 +121,9 @@
   position: absolute;
   bottom: 35vh;
   right: 12vh;
+  z-index: 4;
+  opacity: 100%;
+  transition: opacity 0.5s, transform 1s;
 }
 
 .menu-info-transition {
