--- a/client/src/screens/shared/Header/Header.css
+++ b/client/src/screens/shared/Header/Header.css
@@ -77,3 +77,157 @@
   width: 100%;
   bottom: -5px;
 }
+
+.nav-icon,
+.nav-icon2 {
+  /* border: 2px solid yellow; */
+  background-color: var(--light-red);
+  display: none;
+  justify-content: flex-end;
+  align-items: center;
+  height: 7.5vh;
+  width: 100%;
+  /* padding-top: 45px; */
+  padding-right: 5%;
+  z-index: 1000;
+}
+
+.nav-icon button {
+  border-radius: 50%;
+  height: 5vh;
+  width: 5vh;
+  position: relative;
+  background-color: transparent;
+  border: 2px solid var(--dark-red);
+  transition: 1s;
+  z-index: 1000;
+}
+
+.nav-icon button::before {
+  content: "";
+  background-color: var(--dark-red);
+  position: absolute;
+  top: 1.75vh;
+  left: 0.8vh;
+  height: 2px;
+  width: 3vh;
+  transition: 1s ease-in-out;
+}
+
+.nav-icon button::after {
+  content: "";
+  background-color: var(--dark-red);
+  position: absolute;
+  bottom: 1.75vh;
+  left: 0.8vh;
+  height: 2px;
+  width: 3vh;
+  transition: 1s ease-in-out;
+}
+
+.nav-icon2 button {
+  border-radius: 50%;
+  height: 5vh;
+  width: 5vh;
+  position: relative;
+  background-color: transparent;
+  border: 2px solid var(--dark-red);
+  transform: rotate(-180deg);
+  transition: 1s;
+  z-index: 1000;
+}
+
+.nav-icon2 button::before {
+  content: "";
+  background-color: var(--dark-red);
+  position: absolute;
+  top: 2vh;
+  left: 0.8vh;
+  height: 2px;
+  width: 3vh;
+  transform: rotate(45deg);
+  transition: 1s ease-in-out;
+}
+
+.nav-icon2 button::after {
+  content: "";
+  background-color: var(--dark-red);
+  position: absolute;
+  top: 2vh;
+  left: 0.8vh;
+  height: 2px;
+  width: 3vh;
+  transform: rotate(-45deg);
+  transition: 1s ease-in-out;
+}
+
+.mobile-nav-closed {
+  background-color: var(--light-red);
+  height: 40vh;
+  width: 100%;
+  transition: 1s;
+  transform: translateY(-200%);
+}
+
+.mobile-nav {
+  /* border: 2px solid red; */
+  background-color: var(--light-red);
+  height: 40vh;
+  width: 100%;
+  z-index: 999;
+  transition: 1s;
+  padding: 10% 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.mobile-nav-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  /* border: 2px solid red; */
+  height: 100%;
+  width: 50%;
+  margin-bottom: 10%;
+}
+
+.nav-link-open {
+  color: var(--dark-red);
+}
+
+.nav-link-open:hover {
+  color: var(--red);
+}
+
+.nav-link-open::before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 0px;
+  bottom: -5px;
+  transition: 0.5s ease-in-out;
+}
+
+.nav-link-open:hover::before {
+  content: "";
+  position: absolute;
+  background-color: var(--red);
+  height: 2px;
+  width: 100%;
+  bottom: -5px;
+}
+
+@media (max-width: 800px) {
+  .address-container,
+  .nav-link-container,
+  .nav-link-container2 {
+    display: none;
+  }
+
+  .nav-icon,
+  .nav-icon2 {
+    display: flex;
+  }
+}
