--- a/client/src/screens/Menu/Menu.css
+++ b/client/src/screens/Menu/Menu.css
@@ -87,7 +87,7 @@
   bottom: 0%;
   left: 0%;
   z-index: 4;
-  opacity: 100%;
+  opacity: 100;
   transition: opacity 0.5s, transform 1.5s;
 }
 
@@ -104,7 +104,7 @@
   bottom: 3vh;
   right: 18%;
   z-index: 4;
-  opacity: 100%;
+  opacity: 100;
   transition: opacity 0.5s, transform 2.5s;
 }
 
@@ -116,7 +116,7 @@
   bottom: 35vh;
   right: 12vh;
   z-index: 4;
-  opacity: 100%;
+  opacity: 100;
   transition: opacity 0.5s, transform 1s;
 }
 
