--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: space-between;
   z-index: 999;
+  border: 2px solid yellow;
 }
 
 .slide-btn {
@@ -67,5 +68,8 @@
   .icon-container {
     left: 20%;
     width: 60%;
+  }
+  .play-btn {
+    font-size: 3em;
   }
 }
