--- a/client/src/screens/Information/Information.css
+++ b/client/src/screens/Information/Information.css
@@ -3,123 +3,135 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--dark-red);
-}
-.info-container::before {
-  content: "";
-  height: 100%;
-  width: 100%;
-  background-image: url("../../assets/title-flat.png");
-  background-repeat: repeat;
-  background-position: center;
-  background-size: contain;
-  background-attachment: fixed;
-  position: relative;
-  top: 0;
-  left: 0;
-  opacity: 0.6;
-}
-
-.info-content {
-  height: 80%;
-  width: 75%;
-  background-color: blue;
-  box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.4);
-  display: flex;
-  justify-content: center;
-  position: absolute;
 }
 
 .info {
-  height: 40%;
-  width: 40%;
-  position: relative;
-  top: 55%;
+  border: 10px solid var(--dark-green);
+  background-color: var(--grey-green);
+  height: 50%;
+  width: 30%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   padding: 1% 0;
-  background-color: var(--dark-red);
   border-radius: 15px;
-}
-
-.info-title {
-  background-image: url("../../assets/Dragonfly.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  width: 100%;
-  height: 30%;
 }
 
 .info-text {
   height: 90%;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.info-location,
-.info-hours {
-  color: var(--light-red);
-  display: flex;
-  height: 100%;
-  width: 40%;
-  /* border: 2px solid red; */
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 2% 0;
   align-items: center;
+  text-align: center;
+  color: var(--beige);
   font-size: 0.75rem;
   letter-spacing: 1px;
 }
 
-.info-location p {
-  line-height: 1.5;
+.info-text h4 {
+  color: var(--pink);
+  font-size: 2em;
+  text-decoration: underline;
+  margin-bottom: 5px;
 }
 
-.info-location h4,
-.info-hours h4 {
+.map {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  width: 30%;
+}
+.map a {
+  background-color: var(--blue);
+  color: var(--green);
+  padding: 5% 0;
+  width: 100%;
+  font-weight: bold;
+  letter-spacing: 1px;
+  border-radius: 5px;
+  transition: 0.25s;
+}
+.map a:hover {
+  background-color: var(--dark-green);
+  color: var(--pink);
+  transition: 0.25s;
+}
+
+.info-location,
+.info-hours,
+.info-contact {
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 30%;
+  width: 80%;
+}
+
+.info-text p {
   line-height: 1.5;
-  font-size: 1rem;
 }
 
 .info-icon-container {
   height: 10%;
   width: 60%;
-  color: var(--light-red);
-  font-size: 1.5rem;
+  color: var(--beige);
+  font-size: 2.5rem;
   display: flex;
   justify-content: space-evenly;
+  transition: 0.25s;
 }
 
-@media (max-width: 1200px) {
-  .info-content {
-    width: 90%;
+.info-icon-container a:hover {
+  color: var(--pink);
+  transition: 0.25s;
+}
+
+@media (max-width: 1100px) {
+  .info-container {
+    height: 100vh;
   }
   .info {
-    width: 50%;
+    width: 40%;
+  }
+  .info-text {
+    font-size: 1em;
   }
 }
 
 @media (max-width: 800px) {
   .info {
-    top: 75%;
-    width: 70%;
-    height: 30%;
+    height: 80%;
+    width: 80%;
+  }
+  .info-text {
+    font-size: 0.85em;
+  }
+  .map {
+    width: 40%;
   }
 }
 
-@media (max-width: 600px) {
-  .info-content {
-    width: 95%;
-  }
+@media (max-width: 850px) and (max-height: 400px) {
   .info {
-    width: 95%;
-    top: 65%;
+    height: 90%;
+    width: 90%;
   }
-  .info-icon-container {
-    margin-bottom: 10px;
+  .info-text {
+    height: 70%;
+    flex-direction: row;
+  }
+  .info-location,
+  .info-hours,
+  .info-contact {
+    height: 100%;
+    padding-top: 2%;
+    justify-content: flex-start;
   }
 }
