--- a/client/src/screens/Menu/Menu.css
+++ b/client/src/screens/Menu/Menu.css
@@ -1,196 +1,71 @@
 .menu-container {
-  height: 220vh;
-  background-color: var(--light-red);
-  background-image: url("../../assets/logo-pattern.png");
-  background-attachment: fixed;
+  height: 100vh;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  border-top: 5vh solid var(--grey-green);
+  border-bottom: 5vh solid var(--grey-green);
   box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.4);
 }
 
-.menu-photo {
-  height: 70vh;
-  width: 100%;
-  background-image: url("../../assets/deluxx_photos/cocktail2.jpg");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
-
-.menu-photo2 {
-  height: 70vh;
-  width: 100%;
-  background-image: url("../../assets/deluxx_photos/SangriaCocktail2.jpg");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
-
-.menu-divider {
-  height: 3vh;
-  width: 100%;
-  background-color: var(--red);
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
-  z-index: 2;
-}
-
 .menu-content {
-  height: 80vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  height: 90%;
   width: 100%;
-  position: relative;
+  position: absolute;
+  /* top: 0; */
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .menu-info {
-  width: 60%;
-  height: 75%;
+  width: 10%;
+  height: 10%;
   background-color: var(--red);
   display: flex;
-  position: relative;
   justify-content: center;
   align-items: center;
-  left: 4%;
-  bottom: 8%;
-  opacity: 100;
-  transition: 1s;
+  border-radius: 15px;
 }
 
-.menu-info::after {
-  content: "";
-  position: absolute;
-  left: 2%;
-  top: 2.5%;
-  width: 96%;
-  height: 94%;
-  border: 2px solid var(--light-red);
-}
-
-.menu-content-text {
-  color: var(--light-red);
-  height: 70%;
-  width: 50%;
+.menu-text-link {
+  border: 4px solid var(--pink);
+  border-radius: 10px;
+  height: 60%;
+  width: 80%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding-bottom: 10%;
-  margin-right: 8%;
+  background-color: var(--blue);
+  color: var(--dark-green);
+  font-weight: bold;
+  font-family: var(--display);
+  z-index: 98;
+  transition: 0.25s;
 }
 
-.menu-content-photo {
-  background-color: blue;
-  height: 90%;
-  width: 30%;
-  position: absolute;
-  bottom: 0%;
-  left: 0%;
-  z-index: 4;
-  opacity: 100;
-  transition: opacity 0.5s, transform 1.5s;
+.menu-text-link:hover {
+  background-color: var(--beige);
 }
 
-.menu-content-photo-transition {
-  opacity: 0;
-  transform: translateY(100%);
-}
-
-.menu-content-photo2 {
-  background-color: green;
-  height: 35vh;
-  width: 35vh;
-  position: absolute;
-  bottom: 3vh;
-  right: 18%;
-  z-index: 4;
-  opacity: 100;
-  transition: opacity 0.5s, transform 2.5s;
-}
-
-.menu-content-photo3 {
-  background-color: purple;
-  height: 25vh;
-  width: 25vh;
-  position: absolute;
-  bottom: 35vh;
-  right: 12vh;
-  z-index: 4;
-  opacity: 100;
-  transition: opacity 0.5s, transform 1s;
-}
-
-.menu-info-transition {
-  opacity: 0;
-  transform: translateY(100%);
-}
-
-.menu-text-paragraph {
-  font-size: 0.75rem;
-  letter-spacing: 1px;
-  line-height: 1.5;
-  width: 90%;
-}
-
-@media (max-width: 1200px) {
-  .menu-content-photo2 {
-    height: 25vh;
-    width: 25vh;
-    right: 5%;
-  }
-  .menu-content-photo3 {
-    height: 20vh;
-    width: 20vh;
-    right: 2%;
+@media (max-width: 1100px) {
+  .menu-info {
+    width: 20%;
   }
 }
-
-@media (max-width: 800px) {
-  .menu-photo,
-  .menu-photo2 {
-    background-attachment: scroll;
-  }
-  .menu-content-text {
-    margin-right: 0%;
-  }
-  .menu-text-paragraph {
-    width: 100%;
-    line-height: 1.25;
-  }
-  .menu-content-photo {
-    height: 70vw;
-    width: 34%;
-  }
-}
-
 @media (max-width: 600px) {
   .menu-info {
-    width: 90%;
-    height: 45%;
-    left: 0;
-    top: -25%;
+    width: 35%;
   }
-  .menu-content-text {
-    width: 100%;
-    height: 100%;
-    padding: 5% 0;
+}
+@media (max-width: 850px) and (max-height: 400px) {
+  .menu-container {
+    height: 150vh;
   }
-
-  .menu-text-paragraph {
-    width: 80%;
-    padding: 0;
-    margin: 0;
-    line-height: 1.1;
+  .menu-content {
+    height: 140vh;
   }
-  .menu-content-photo {
-    height: 55%;
-    width: 45%;
-  }
-  .menu-content-photo2 {
-    bottom: 1vh;
-  }
-  .menu-content-photo3 {
-    right: 0;
-    bottom: 20vh;
+  .menu-info {
+    margin-top: -10%;
   }
 }
