--- a/client/src/screens/Title/Title.css
+++ b/client/src/screens/Title/Title.css
@@ -1,25 +1,69 @@
 .title-container {
-  height: 85vh;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.4);
+  z-index: 100;
+}
+
+.address-container {
+  height: 5vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.4);
+  background-color: var(--grey-green);
+  color: var(--beige);
+}
+
+.address {
+  font-size: 0.75rem;
+  padding: 5px;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 
 .title-content {
   height: 100%;
-  width: 70%;
-  max-width: 700px;
-  background-image: url("../../assets/Dragonfly.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  position: absolute;
+}
+
+.title-icon-container {
+  width: 30%;
+  margin-bottom: 5%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 3.5rem;
+}
+
+.title-icon-container a {
+  color: var(--beige);
+  transition: 0.25s;
+}
+
+.title-icon-container a:hover {
+  color: var(--pink);
+  transition: 0.25s;
+}
+
+@media (max-width: 1024px) {
+  .title-icon-container {
+    width: 80%;
+    font-size: 6em;
+  }
 }
 
 @media (max-width: 600px) {
-  .title-content {
-    top: -22vh;
-    width: 100%;
+  .title-icon-container {
+    font-size: 4em;
+  }
+}
+
+@media (max-width: 850px) and (max-height: 400px) {
+  .title-icon-container {
+    font-size: 3em;
+    width: 40%;
   }
 }
