--- a/client/src/screens/shared/Layout/Layout.css
+++ b/client/src/screens/shared/Layout/Layout.css
@@ -2,3 +2,12 @@
   display: flex;
   flex-direction: column;
 }
+
+.layout {
+  height: 100%;
+  width: 100%;
+  background: url("../../../assets/tilereduxfull.png") center;
+  background-repeat: repeat;
+  background-position: center;
+  background-size: contain;
+}
