--- a/client/src/screens/Title/Title.css
+++ b/client/src/screens/Title/Title.css
@@ -56,6 +56,9 @@
 }
 
 @media (max-width: 600px) {
+  .title-container {
+    height: 80vh;
+  }
   .title-icon-container {
     font-size: 4em;
   }
