--- a/client/src/screens/shared/Layout/Layout.css
+++ b/client/src/screens/shared/Layout/Layout.css
@@ -10,4 +10,12 @@
   background-repeat: repeat;
   background-position: center;
   background-size: contain;
+  background-attachment: fixed;
+}
+
+@media (max-width: 800px) {
+  .layout {
+    background-size: cover;
+    background-attachment: auto;
+  }
 }
